--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-horizontal-scrolling-menu": "^7.0.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
@@ -39,6 +41,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "sass": "^1.75.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   },
