--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
