feat: update dependencies

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@chakra-ui/checkbox": "^2.3.2",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "axios": "^1.6.8",
@@ -45,7 +46,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.11"
   },
   "lint-staged": {
     "*.ts": [
